After working towards jekyll/metalsmith parity and before leaving legacy contraints behind

--- a/framework/aspects/index.html
+++ b/framework/aspects/index.html
@@ -64,48 +64,75 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/framework/aspects.md/">Framework</a>
+                              / Aspects.md
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//framework/aspects.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//framework/aspects.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//framework/aspects.md">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
+      <h1 id="aspects">Aspects</h1>
+<blockquote>
+<p>Aspects that can be considered to look into a topic (privacy, security). Could also be called dimensions but this is a term used with a specific technical term for the description of data.<br />
+Are aspects categories of metrics and/or measurements? Probably of metrics, as measurements don't really have meaning on their own.</p>
+</blockquote>
+<!-- MarkdownTOC -->
 <ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
+<li>[Technical][technical]
+<ul>
+<li>[Code][code]</li>
+<li>[Architecture][architecture]</li>
+<li>[Infrastructure][infrastructure]</li>
+</ul></li>
+<li>[Experience][experience]
+<ul>
+<li>[Users][users]</li>
+<li>[Design][design]</li>
+<li>[Context][context]</li>
+</ul></li>
+<li>[Developer][developer]
+<ul>
+<li>[Contributor][contributor]</li>
+<li>[Organisation][organisation]</li>
+<li>[Governance][governance]</li>
+</ul></li>
 </ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+<!-- /MarkdownTOC -->
+<h2 id="technical">Technical</h2>
+<h3 id="code">Code</h3>
+<h3 id="architecture">Architecture</h3>
+<blockquote>
+<p>How the application is designed overall. Is this a bottom-up emergent property (made of other observations about each aspects of the code) or a top-down design property (UML)?</p>
+</blockquote>
+<p>Agent characteristics</p>
+<ul>
+<li>Unstructured/Semi-structured/Structured Specification (expert sourced)</li>
+</ul>
+<h3 id="infrastructure">Infrastructure</h3>
+<h2 id="experience">Experience</h2>
+<h3 id="users">Users</h3>
+<blockquote>
+<p>User's reviews, support requests,...</p>
+</blockquote>
+<ul>
+<li>Unstructured/Semi-structured/Structured Review (public sourced)</li>
+</ul>
+<h3 id="design">Design</h3>
+<ul>
+<li>Disclosures/Notifications</li>
+</ul>
+<h3 id="context">Context</h3>
+<h2 id="developer">Developer</h2>
+<h3 id="contributor">Contributor</h3>
+<blockquote>
+<p>Individual Contributors, Developers...</p>
+</blockquote>
+<h3 id="organisation">Organisation</h3>
+<h3 id="governance">Governance</h3>
 
     </div>
 
