--- a/framework/tech-workshop/index.html
+++ b/framework/tech-workshop/index.html
@@ -64,48 +64,38 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/framework/tech-workshop.md/">Framework</a>
+                              / Tech workshop.md
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//framework/tech-workshop.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//framework/tech-workshop.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//framework/tech-workshop.md">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
+      <p>Cluster</p>
+<p>User: Who do we portray the user</p>
 <ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
+<li>Prepare:</li>
+<li>White boards. What’s you thing? With the universe of topics. 100 post-its. 10 min.</li>
+<li>Paper boards with 4 zones. What are best practices? 10 min.</li>
+<li>How do we measure it? 3 top practices. 10 min. Write all the ways they could measure it.</li>
+<li>Discussion.</li>
+<li><p>30 min. Setting in motion so that they stay engaged.</p></li>
+<li><p>Demo.</p></li>
 </ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+<p>What can be collected to evaluate adoption of best practice.</p>
+<ul>
+<li><p>Cluster:</p></li>
+<li>Post its: What are best practices?
+<ul>
+<li>Edge / Good / Common / Bad</li>
+<li>Do one.</li>
+</ul></li>
+<li><h2 id="post-its-how-do-we-measure-it">Post its: How do we measure it?</h2></li>
+</ul>
 
     </div>
 
