--- a/metrics/1_sources/ranking_digital_rights/index.html
+++ b/metrics/1_sources/ranking_digital_rights/index.html
@@ -64,48 +64,60 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/metrics/1_sources/ranking_digital_rights.md/">Metrics</a>
+                              / <a href="/openintegrity.org/metrics/1_sources/ranking_digital_rights.md/">1_sources</a>
+                              / Ranking_digital_rights.md
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//metrics/1_sources/ranking_digital_rights.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//metrics/1_sources/ranking_digital_rights.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//metrics/1_sources/ranking_digital_rights.md">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
+      <h1 id="methodology">Methodology</h1>
+<blockquote>
+<p>Discussion which documents are binding?</p>
+</blockquote>
+<blockquote>
+<p>Discussion about the granularity of what is collected and for what purpose.</p>
+</blockquote>
+<blockquote>
+<p>Discussion: What does acceptable remedy looks like?</p>
+</blockquote>
+<h1 id="data">Data</h1>
+<p>Evidence data about elements could be reused by OII. Steps for this could be:</p>
 <ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
+<li>In the <em>Company</em>Outcome sheets</li>
+<li>Under each colored group, for each question <em>Element #</em>
+<ul>
+<li>In the sources field, there is a <em>Element #:</em> prefix followed by a list of numbers, for each <em>Source #</em>
+<ul>
+<li>In the <em>Company</em>Sources sheet
+<ul>
+<li>the <em>Source #</em> column has the reference, and there is:
+<ul>
+<li>Document title</li>
+<li>URL</li>
+<li>Date of document (often empty)</li>
+<li>Date accessed</li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li>In the comment field, there is a <em>Element #:</em> with information that explains the score.</li>
+</ul></li>
 </ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+<p>Converting to OII:</p>
+<ul>
+<li><em>Element #</em> would be a <strong>Claim</strong> it is prefixed by a yes/no with some details. The original question is not in the spreadsheet but on the website for instance (<a href="https://rankingdigitalrights.org/index2015/indicators/c1/" class="uri">https://rankingdigitalrights.org/index2015/indicators/c1/</a>) and as Markdown (<a href="https://github.com/rankingdigitalrights/index2015/blob/stage/app/_indicators/c1.md" class="uri">https://github.com/rankingdigitalrights/index2015/blob/stage/app/_indicators/c1.md</a>)</li>
+<li></li>
+</ul>
+<h1 id="potential-collaboration-items">Potential collaboration items</h1>
+<ul>
+<li>Restructure the raw data to make it easier to access evidence/source info.</li>
+<li>Help publish this</li>
+</ul>
 
     </div>
 
