--- a/framework/index.html
+++ b/framework/index.html
@@ -64,48 +64,37 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/framework/index.md/">Framework</a>
+                              / Index.md
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//framework/index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//framework/index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//framework/index.md">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
-<ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
-</ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+      <h1 id="meta">Meta</h1>
+<blockquote>
+<p>About the framework</p>
+</blockquote>
+<h2 id="key-concepts">Key concepts:</h2>
+<h3 id="security-is-here-understood-as-end-user-security-i.e.-the-various-aspects-that-help-keep-the-tool-operating-with-integrity.">Security is here understood as &quot;end user security&quot;, i.e. the various aspects that help keep the tool operating with integrity.</h3>
+<h3 id="privacy">Privacy</h3>
+<p>We take the definition adopted in Ethical Privacy Guidelines for Mobile Connectivity Measurements from the Oxford Internet Institute, itself</p>
+<p>Informational/data privacy and self-determination<br />
+Informational privacy concerns the individual’s right to exercise control over the disclosure or processing of her personal information. In this sense, Westin defines privacy as <strong>“the claim of individuals, groups, or institutions to determine for themselves when, how and to what extent information about them is communicated to others”</strong>.</p>
+<p>Solove identifies four harmful activities with regards to privacy:<br />
+1. Information collection (surveillance and interrogation);<br />
+2. Information processing (identification, aggregation, storing, second uses, exclusion);<br />
+3. Information dissemination (disclosure, breach of confidentiality, exposure, increased, accessibility, distortion, blackmail and appropriation);<br />
+4. Invasion (intrusion or interference into one’s life).</p>
+<p>Ranking Digital Rights use the term &quot;User Information&quot; which is broader than personal information. Lots of definitions out there.</p>
+<h1 id="ha-ha">Ha ha</h1>
+<blockquote>
+<p>Making eyeballs fulfill their potential since 2013.</p>
+</blockquote>
 
     </div>
 
