--- a/images/icon/index.html
+++ b/images/icon/index.html
@@ -64,48 +64,20 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/images/icon.svg/">Images</a>
+                              / Icon.svg
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//images/icon.svg">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//images/icon.svg">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//images/icon.svg">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
-<ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
-</ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+      <?xml version="1.0" standalone="yes"?>
+<svg version="1.1" viewBox="0.0 0.0 256.0 256.0" fill="none" stroke="none" stroke-linecap="square" stroke-miterlimit="10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<p><clipPath id="p.0"><path d="m0 0l256.0 0l0 256.0l-256.0 0l0 -256.0z" clip-rule="nonzero"></path></clipPath><g clip-path="url(#p.0)"><path fill="#0c343d" d="m0 0l256.0 0l0 256.0l-256.0 0z" fill-rule="nonzero"></path><path fill="#000000" fill-opacity="0.0" d="m0.31233597 0.31233597l256.0 0l0 256.0l-256.0 0z" fill-rule="nonzero"></path><path stroke="#ffffff" stroke-width="3.0" stroke-linejoin="round" stroke-linecap="butt" d="m0.31233597 0.31233597l256.0 0l0 256.0l-256.0 0z" fill-rule="nonzero"></path><path fill="#e69138" d="m26.613646 156.3008l31.22497 -39.169533l-11.143829 -48.84397l50.080795 7.6293945E-5l31.224419 -39.169777l31.224411 39.169777l50.08081 -7.6293945E-5l-11.143829 48.84397l31.22496 39.169533l-45.12152 21.737564l-11.14415 48.844055l-45.12068 -21.737839l-45.12069 21.737839l-11.144142 -48.844055z" fill-rule="nonzero"></path><path stroke="#ffffff" stroke-width="3.0" stroke-linejoin="round" stroke-linecap="butt" d="m26.613646 156.3008l31.22497 -39.169533l-11.143829 -48.84397l50.080795 7.6293945E-5l31.224419 -39.169777l31.224411 39.169777l50.08081 -7.6293945E-5l-11.143829 48.84397l31.22496 39.169533l-45.12152 21.737564l-11.14415 48.844055l-45.12068 -21.737839l-45.12069 21.737839l-11.144142 -48.844055z" fill-rule="nonzero"></path></g></svg></p>
 
     </div>
 
