--- a/metrics/2_measurements/technical_architecture/index.html
+++ b/metrics/2_measurements/technical_architecture/index.html
@@ -64,48 +64,50 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/metrics/2_measurements/technical_architecture.md/">Metrics</a>
+                              / <a href="/openintegrity.org/metrics/2_measurements/technical_architecture.md/">2_measurements</a>
+                              / Technical_architecture.md
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//metrics/2_measurements/technical_architecture.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//metrics/2_measurements/technical_architecture.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//metrics/2_measurements/technical_architecture.md">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
+      <h1 id="architecture">Architecture</h1>
+<p>Currently this could be done via the Project Type (Client, Server, Library, Service, Platform) maybe we should represent this as simplified patterns.</p>
 <ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
+<li>Remote Dependencies</li>
+<li>Ownership? License? Knowledge?</li>
 </ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+<h2 id="architectural-patterns">Architectural Patterns</h2>
+<p>Simple client / Autonomous / Doesn't talk to the network.</p>
+<ul>
+<li></li>
+</ul>
+<p>Browser</p>
+<ul>
+<li>&lt;--&gt; ()</li>
+</ul>
+<p>Client Server</p>
+<ul>
+<li>&lt;--&gt; *</li>
+</ul>
+<p>Peer to peer</p>
+<ul>
+<li>&lt;- * -&gt; *</li>
+</ul>
+<blockquote>
+<p>Network dependencies are one thing, but sensors are also part of it.</p>
+</blockquote>
+<ul>
+<li>What is an architectural contribution to OII?</li>
+</ul>
+<blockquote>
+<p>It is a contribution, therefore some form of measurement, observation or claim that a particular architectural pattern is the case for some project.</p>
+</blockquote>
 
     </div>
 
