--- a/metrics/3_metrics/developer_pull_requests_cycle_time/index.html
+++ b/metrics/3_metrics/developer_pull_requests_cycle_time/index.html
@@ -64,48 +64,23 @@
     <div>
       <small>
         <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / Index.md
+                      / <a href="/openintegrity.org/metrics/3_metrics/developer_pull_requests_cycle_time.md/">Metrics</a>
+                              / <a href="/openintegrity.org/metrics/3_metrics/developer_pull_requests_cycle_time.md/">3_metrics</a>
+                              / Developer_pull_requests_cycle_time.md
                 </div>
 
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//index.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//index.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//index.md">View page source</a></em>
+        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//metrics/3_metrics/developer_pull_requests_cycle_time.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//metrics/3_metrics/developer_pull_requests_cycle_time.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//metrics/3_metrics/developer_pull_requests_cycle_time.md">View page source</a></em>
         </div>
       </small>
     </div>
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
-<p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
-<ul>
-<li>Which tools are open-source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy</li>
-<li>Which support two-factor authentication?</li>
-<li>Which can be downloaded securely and verified to be authentic?</li>
-</ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<div class="related">
-  <h3>Recent Blog Posts</h3>
-  <ul class="related-posts">
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-08-internet-freedom-festival">
-            Impact Workshop at the IFF in Valencia
-            <small>2016-03-08</small>
-          </a>
-        </h3>
-      </li>
-      <li>
-        <h3>
-          <a href="/openintegrity.org/blog/2016-03-01-booting-up">
-            Booting up the Open Integrity Index
-            <small>2016-03-01</small>
-          </a>
-        </h3>
-      </li>
-  </ul>
-</div>
+      <h1 id="pull-request-cycle-time">Pull Request Cycle Time</h1>
+<blockquote>
+<p>This metric can help measure the activity of the project and how collaborative it is. If a project has a small dedicated core team but many contributors and</p>
+</blockquote>
+<p>[(Duration, Period)]</p>
 
     </div>
 
