Fixed link and changed title

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
     <div class="page" style="clear:both">
       <h1 class="page-title"></h1>
-      <h2 id="rebooting-open-integrity">Rebooting Open Integrity</h2>
-<p>The Open Integrity Initiative is <a href="2016/03/08/booting-up">booting up</a>.</p>
+      <h2 id="open-integrity-initiative">Open Integrity Initiative</h2>
+<p>The Open Integrity Initiative is <a href="blog/2016-03-08-booting-up">booting up</a>.</p>
 <p>We aim to provide <strong>reliable, consistent and evidence based</strong> answers to questions such as:</p>
 <ul>
 <li>Which tools are open-source?</li>
