--- a/about/index.html
+++ b/about/index.html
@@ -1,80 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-us">
-
-<head>
-  <link href="http://gmpg.org/xfn/11" rel="profile">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-  <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-  <title>
-      About &middot; Open Integrity
-  </title>
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="/openintegrity.org/public/css/poole.css">
-  <link rel="stylesheet" href="/openintegrity.org/public/css/syntax.css">
-  <link rel="stylesheet" href="/openintegrity.org/public/css/hyde.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-
-  <!-- Icons -->
-  <!--
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/openintegrity.org/public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="/openintegrity.org/public/favicon.ico"> -->
-  <link rel="icon" type="image/svg+xml" href="images/icon.svg">
-
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/openintegrity.org/atom.xml">
-</head>
-
-  <body>
-
-<div class="sidebar">
-  <div class="container sidebar-sticky">
-    <div class="sidebar-about">
-      <h1>
-        <a href="/openintegrity.org">
-          Open Integrity
-        </a>
-      </h1>
-      <p class="lead">Measuring the adoption of security and privacy best practices</p>
-    </div>
-
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item" href="/openintegrity.org/">Home</a>
-
-
-
-                                                                                                <a class="sidebar-nav-item" href="/openintegrity.org/blog">Blog</a>
-                                                          <a class="sidebar-nav-item" href="/openintegrity.org/partners">Partners</a>
-                                                                                                                                                                                                                        <a class="sidebar-nav-item active" href="/openintegrity.org/about">About</a>
-                                                                                                                                                                                                                                                            
-      <a class="sidebar-nav-item" href="https://code.iilab.org/openintegrity/openintegrity.org">GitHub project</a>
-
-    </nav>
-
-    <p><small>&copy; 2016 <a href="https://iilab.org">iilab</a></small> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0; display:inline; margin:-2px 0;" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br><small>Theme <a href="https://github.com/poole/hyde">Hyde</a> by <a href="https://github.com/mdo">mdo</a></small></p>
-  </div>
-</div>
-
-    <div class="content container">
-
-    <div>
-      <small>
-        <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / About.md
-                </div>
-
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//about.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//about.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//about.md">View page source</a></em>
-        </div>
-      </small>
-    </div>
-
-    <div class="page" style="clear:both">
-      <h1 class="page-title">About</h1>
-      <p>The <a href="https://openintegrity.org">Open Integrity Initiative</a> aims to raise the quality of software in order to improve application security and end user privacy.</p>
+<!DOCTYPE html><!--if lt IE 7<html class="ie ie6" lang="en">--><!--if IE 7<html class="ie ie7" lang="en">--><!--if IE 8<html class="ie ie8" lang="en">--><!--if (gte IE 9)|!(IE)<!--><html lang="en"> <!--
+--><html><head><meta charset="utf8"><title>About &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/openintegrity.org/css/skeleton.css"><link rel="stylesheet" href="/openintegrity.org/css/site.css"><!--if lt IE 9script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
+--><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body><div class="container"><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a><li class="navbar-item"><a href="/openintegrity.org/about/" class="navbar-link active">About</a></li><li class="navbar-item"><a href="/openintegrity.org/partners/" class="navbar-link">Partners</a></li></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Framework</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="metrics" class="popover-link">Metrics</a></li><li class="popover-item"><a href="score" class="popover-link">Score</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org" class="navbar-link">Source</a></li></ul></div></nav><nav class="subnavbar"><small class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org">Home</a></li>/ About<div class="utilities u-pull-right"><li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master/about.md">Edit this page</a></li> - <li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master/about.md">View page history</a></li> - <li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master/about.md">View page source</a></li></div></ul></small></nav><div class="docs-section"><h1 class="docs-header">About</h1><p>The <a href="https://openintegrity.org">Open Integrity Initiative</a> aims to raise the quality of software in order to improve application security and end user privacy.</p>
 <p>It does so by curating and disseminating knowledge about software. It aggregates, synthesises and makes accessible information that covers a range of practices that impact the security and privacy of users by, for instance, conveying the important aspects of security audits, usability reviews and terms of services.</p>
 <p>It supports an ongoing consultation that feeds into a framework for the measurement of software project practices. The initiative leverages existing partnerships and works to build new ones in order to drive the development and deployment of automated measurement and peer-review workflows. It aggregates these measurements, categorises them within an open metrics taxonomy and makes them available through an open data repository.</p>
 <p>These curated metrics will become a source of ground truth upon which evidence-backed scorecards can be developed for use by trainers, advocates, funders and policy makers working to improve end-user security and privacy. By focusing on the impact of best practices, as they relate to at-risk groups, the Open Integrity Initiative will provide decision support for those who need it most, while also serving a growing audience of software users.</p>
@@ -86,10 +12,7 @@
 <p>The project receives a $104,500 grant from the Media Democracy Fund to reboot the Open Integrity Initiative focusing on the project team, project infrastructure, partner engagement and partnership agreements as well as establishing a platform for open and transparent collaboration. This grant will also support the Framework Phase, consisting of the development of the methodological foundations for the project, setting out initial thoughts, understanding and conclusions for dissemination and review by the wider community.</p>
 <h4 id="july-2016-open-technology-fund"><em>July 2016</em> Open Technology Fund</h4>
 <p>The Open Tech Fund has allocated funds to support the Data Phase of the project, during which we will collect and review existing expert information across multiple disciplines about current development practices. This data will cover a diverse range of tools and be kept up to date. It will provide an outlet for independent audits sourced by expert communities. A public website will be launched with initial set of data in order to solicit feedback from the community.</p>
-
-    </div>
-
-    </div>
-
-  </body>
-</html>
+</div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
+js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
+document.body.appendChild(js)
+</script></html>
