--- a/scores/eff_secure_messaging_scorecard/index.html
+++ b/scores/eff_secure_messaging_scorecard/index.html
@@ -1,81 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-us">
-
-<head>
-  <link href="http://gmpg.org/xfn/11" rel="profile">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-  <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-  <title>
-       &middot; Open Integrity
-  </title>
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="/openintegrity.org/public/css/poole.css">
-  <link rel="stylesheet" href="/openintegrity.org/public/css/syntax.css">
-  <link rel="stylesheet" href="/openintegrity.org/public/css/hyde.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-
-  <!-- Icons -->
-  <!--
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/openintegrity.org/public/apple-touch-icon-144-precomposed.png">
-                                 <link rel="shortcut icon" href="/openintegrity.org/public/favicon.ico"> -->
-  <link rel="icon" type="image/svg+xml" href="images/icon.svg">
-
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/openintegrity.org/atom.xml">
-</head>
-
-  <body>
-
-<div class="sidebar">
-  <div class="container sidebar-sticky">
-    <div class="sidebar-about">
-      <h1>
-        <a href="/openintegrity.org">
-          Open Integrity
-        </a>
-      </h1>
-      <p class="lead">Measuring the adoption of security and privacy best practices</p>
-    </div>
-
-    <nav class="sidebar-nav">
-      <a class="sidebar-nav-item" href="/openintegrity.org/">Home</a>
-
-
-
-                                                                                                <a class="sidebar-nav-item" href="/openintegrity.org/blog">Blog</a>
-                                                          <a class="sidebar-nav-item" href="/openintegrity.org/partners">Partners</a>
-                                                                                                                                                                                                                        <a class="sidebar-nav-item" href="/openintegrity.org/about">About</a>
-                                                                                                                                                                                                                                                            
-      <a class="sidebar-nav-item" href="https://code.iilab.org/openintegrity/openintegrity.org">GitHub project</a>
-
-    </nav>
-
-    <p><small>&copy; 2016 <a href="https://iilab.org">iilab</a></small> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0; display:inline; margin:-2px 0;" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br><small>Theme <a href="https://github.com/poole/hyde">Hyde</a> by <a href="https://github.com/mdo">mdo</a></small></p>
-  </div>
-</div>
-
-    <div class="content container">
-
-    <div>
-      <small>
-        <div style="float:left"><a href="/openintegrity.org/">Home</a>
-                      / <a href="/openintegrity.org/scores/eff_secure_messaging_scorecard.md/">Scores</a>
-                              / Eff_secure_messaging_scorecard.md
-                </div>
-
-        <div style="float:right"><em><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master//scores/eff_secure_messaging_scorecard.md">Edit this page</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master//scores/eff_secure_messaging_scorecard.md">View page history</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master//scores/eff_secure_messaging_scorecard.md">View page source</a></em>
-        </div>
-      </small>
-    </div>
-
-    <div class="page" style="clear:both">
-      <h1 class="page-title"></h1>
-      <h1 id="eff-secure-messaging-scorecard">EFF Secure Messaging Scorecard</h1>
+<!DOCTYPE html><!--if lt IE 7<html class="ie ie6" lang="en">--><!--if IE 7<html class="ie ie7" lang="en">--><!--if IE 8<html class="ie ie8" lang="en">--><!--if (gte IE 9)|!(IE)<!--><html lang="en"> <!--
+--><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/openintegrity.org/css/skeleton.css"><link rel="stylesheet" href="/openintegrity.org/css/site.css"><!--if lt IE 9script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
+--><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body><div class="container"><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a><li class="navbar-item"><a href="/openintegrity.org/about/" class="navbar-link">About</a></li><li class="navbar-item"><a href="/openintegrity.org/partners/" class="navbar-link">Partners</a></li></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Framework</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="metrics" class="popover-link">Metrics</a></li><li class="popover-item"><a href="score" class="popover-link">Score</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org" class="navbar-link">Source</a></li></ul></div></nav><nav class="subnavbar"><small class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org">Home</a></li>/ <li class="navbar-item"><a href="/openintegrity.orgscores/">Scores</a></li>  / Eff_secure_messaging_scorecard<div class="utilities u-pull-right"><li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master/scores/eff_secure_messaging_scorecard.md">Edit this page</a></li> - <li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master/scores/eff_secure_messaging_scorecard.md">View page history</a></li> - <li class="navbar-item"><a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master/scores/eff_secure_messaging_scorecard.md">View page source</a></li></div></ul></small></nav><h1 id="eff-secure-messaging-scorecard">EFF Secure Messaging Scorecard</h1>
 <blockquote>
 <p>Use the EFF Scorecard as an example of what would need to be collected in order to make the scorecard dynamic, and learn from the criteria approach and how it is metadata for a score.</p>
 </blockquote>
@@ -161,10 +86,7 @@ There was only a End to End Encryption criteria.</p>
 </ol>
 <p>This criterion requires an independent security review has been performed within the 12 months prior to evaluation. This review must cover both the design and the implementation of the app and must be performed by a named auditing party that is independent of the tool's main development team. Audits by an independent security team within a large organization are sufficient. Recognizing that unpublished audits can be valuable, we do not require that the results of the audit have been made public, only that a named party is willing to verify that the audit took place.</p>
 <p>We've discussed this criterion in depth in a Deeplinks post: What Makes a Good Security Audit?</p>
-
-    </div>
-
-    </div>
-
-  </body>
-</html>
+</div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto://contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>var js = document.createElement('script')
+js.src = '//' + (location.host || 'localhost').split(':')[0] + ':3000/browser-sync/browser-sync-client.js'
+document.body.appendChild(js)
+</script></html>
